@@ -5,7 +5,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Ignore virtualHostMonster configuartions in paths.
+  [jone]
 
 
 1.0.0 (2014-03-21)
